Fixing some layout issues.

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 10rem 2rem;
+    padding: 6rem 2rem;
 }
 
 /* button styles */
@@ -44,7 +44,7 @@ body {
     border-radius: 12px;
     text-align: center;
     text-decoration: none;
-    margin-top: 2.5rem;
+    margin-top: 3rem;
     font-weight: 700;
 }
 
@@ -56,6 +56,7 @@ body {
 .btn-blue {
     background-color: var(--color-brightblue);
     color: white;
+    box-shadow: 0 20px 10px rgb(235, 235, 235);
 }
 
 .btn-white {
@@ -92,7 +93,7 @@ body {
 }
 
 .card__title {
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     color: var(--color-darkblue);
     font-weight: 900;
 }
@@ -102,7 +103,7 @@ body {
 }
 
 .card__body {
-    padding: 3rem;
+    padding: 2.5rem 3rem;
 }
 
 .card__plan {
@@ -111,7 +112,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.7rem;
+    padding: 2.5rem;
 }
 
 .plan {
@@ -144,6 +145,11 @@ body {
     opacity: 0.6;
 }
 
+.card__buttons {
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+}
+
 /* attribution styles */
 footer {
     padding: 2rem;
@@ -170,6 +176,10 @@ footer {
     }
 
     .card__body {
-        padding: 4rem;
+        padding: 2rem 4rem;
+    }
+
+    .btn-block {
+        padding: 1.2rem;
     }
 }
